Prevent help icon in 96e23af791 wrap to next line

--- a/src/app/query-history/query-history.component.css
+++ b/src/app/query-history/query-history.component.css
@@ -117,3 +117,7 @@ a.show-details-button:hover {
 .bool-op-image {
   min-width: 42px;
 }
+
+.results-header {
+  white-space: nowrap;
+}
